--- a/style.css
+++ b/style.css
@@ -2,7 +2,13 @@
 Theme Name: WP-REFRESH-2022
 Author: some uy
 */
-
-body{
-    background: steelblue;
+body {
+  background: green;
 }
+
+body p {
+  background: grey;
+  padding: 1rem;
+  color: white;
+}
+/*# sourceMappingURL=style.css.map */
