--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,9 +3,9 @@ Theme Name: WP-REFRESH-2022
 Author: some uy
 */
 body{
-    background: green;
+    background: steelblue;
     & p{
-        background: grey;
+        background: cyan;
         padding: 1rem; 
         color: white;
     }
