--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,7 +5,7 @@ Author: some uy
 body{
     background: steelblue;
     & p{
-        background: cyan;
+        background: darkcyan;
         padding: 1rem; 
         color: white;
     }
